@@ -5,12 +5,11 @@ ingarch.fit <- function(ts, model=list(past_obs=NULL, past_mean=NULL, external=N
   durations <- c(start=NA, inter=NA, final=NA, total=NA)
   begin_total <- proc.time()["elapsed"]
   model_names <- c("past_obs", "past_mean", "external")
-  stopifnot( #Are the arguments valid?
-    all(names(model) %in% model_names)
-  )
+  if(!all(names(model) %in% model_names)) stop("Argument 'model' must only contain list elements named \"past_obs\", \"past_mean\"\nand \"external\".")
   model <- model[model_names]
   names(model) <- model_names
   if(is.null(xreg)) xreg <- matrix(0, nrow=length(ts), ncol=0) else xreg <- as.matrix(xreg)
+  if(any(xreg<0)) stop("The covariates given in argument 'xreg' must be nonnegative for a model with\nthe identity link function. Choose a model with the logarithmic link function\ninstead or shift the values of the respective covariate(s) by a constant such that\nthey become nonnegative.")
   if(length(model$external)==0) model$external <- rep(FALSE, ncol(xreg)) else model$external <- as.logical(model$external) #the default value for model$external is FALSE (i.e. an internal covariate effect)
   if(length(model$external)==1) model$external <-  rep(model$external, ncol(xreg)) else model$external <- as.logical(model$external) #if only one value for model$external is provided, this is used for all covariates
   if(is.list(ts)) stop("Argument 'ts' has to be a vector") 
@@ -38,19 +37,18 @@ ingarch.fit <- function(ts, model=list(past_obs=NULL, past_mean=NULL, external=N
   R <- seq(along=numeric(r)) #sequence 1:r if r>0 and NULL otherwise
   if(p==0 & q>0) warning("Without dependence on past observations the dependence on past values of the\nlinear predictor has no effect. Choose the model wisely.")
   parameternames <- tsglm.parameternames(model=model, xreg=xreg)
-  #start_default <- list(method="CSS", use=Inf, optim.method="BFGS", optim.control=list(maxit=25))
   start_default <- list(method="iid", use=Inf)
   if(!all(names(start.control) %in% c(names(start_default), "intercept", "past_obs", "past_mean", "xreg"))) stop("There are unknown list elements in argument 'start.control'")
   start_default[names(start.control)] <- start.control #options given by user override the default
   start.control <- start_default #use these options in the following
   if(!is.null(final.control)){
-    final_default <- list(constrained=list(outer.iterations=100, outer.eps=1e-05), optim.method="BFGS", optim.control=list(maxit=100, reltol=1e-11))
+    final_default <- list(constrained=list(), optim.method="BFGS", optim.control=list(maxit=100, reltol=1e-11))
     final_default[names(final.control)] <- final.control  
     final.control <- final_default
     if(!all(names(final.control) %in% names(final_default))) stop("There are unknown list elements in argument 'final.control'")
   }
   if(!is.null(inter.control)){
-    inter_default <- list(constrained=list(outer.iterations=5, outer.eps=1e-05), optim.method="Nelder-Mead", optim.control=list(maxit=20, reltol=1e-8))
+    inter_default <- list(constrained=list(outer.iterations=5), optim.method="Nelder-Mead", optim.control=list(maxit=20, reltol=1e-8))
     inter_default[names(inter.control)] <- inter.control  
     inter.control <- inter_default
     if(!all(names(inter.control)%in%names(inter_default))) stop("There are unknown list elements in argument 'inter.control'")
@@ -99,7 +97,7 @@ ingarch.fit <- function(ts, model=list(past_obs=NULL, past_mean=NULL, external=N
     grad <- function(paramvec, model, xreg) ingarch.loglik(paramvec=paramvec, model=model, ts=ts, xreg=xreg, score=TRUE, info="none", init.method=init.method, init.drop=init.drop)$score
     optimisation <- function(starting_value, model, xreg, arguments){  
       if(!is.null(arguments$constrained)){
-        ui <- rbind(diag(1+p+q+r), c(0,rep(-1,p+q),rep(0, r)))
+        ui <- rbind(diag(1+p+q+r), c(0, rep(-1,p+q), rep(0, r)))
         ci <- c(slackvar, rep(0, p+q+r), -1+slackvar) 
         optim_result <- do.call(constrOptim, args=c(list(theta=starting_value, f=f, grad=grad, ui=ui, ci=ci, method=arguments$optim.method, control=c(list(fnscale=-1), arguments$optim.control), model=model, xreg=xreg), arguments$constrained))
       }else{
@@ -121,6 +119,8 @@ ingarch.fit <- function(ts, model=list(past_obs=NULL, past_mean=NULL, external=N
   if(p+q+r>0 && all(abs((paramvec_final-paramvec_start)/paramvec_final) < 0.01)) warning("Final estimation is still very close to start estimation. This might indicate a\nproblem with the optimisation but could also have happended by chance. Please\ncheck results carefully.")
   if(p+q>0 && mean(paramvec_final[c(1+P,1+p+Q)]) < 1e-04) warning("There is almost no serial dependence estimated in the data. This might be\nappropriate but could just as likely indicate a problem with the optimisation. Please check\nresults carefully.")
   if(paramvec_final[1] < 0.1) warning("Estimated intercept is very small (< 0.1). This might indicate a problem with\nthe optimisation unless the observed marginal mean is very low or the observed\nserial dependence is very strong. Please check results carefully.")
+  if(sum(paramvec_final[1+P+Q])>1-slackvar-epsilon) warning("The sum of the estimated serial dependence parameters is very close to the\nboundary value one. This is a plausible estimation in the presence of very\nstrong serial dependence. However, this could also point to a nonstationarity\nof the process which has not been taken into account, e.g. a trend. Please\n check results carefully.")
+  if(any(paramvec_final[1+p+q+R]<=epsilon)) warning("At least one estimated parameter corresponding to a covariate is very close to\nzero, the boundary of the parameter constraint for this parameter. This might\nbe an appropriate estimation but could also indicate that the parameter is\nactually negative and the chosen model is too restrictive. In such a case one\ncould consider using a model with the logarithmic link function. Please check\nresults carefully.")
   ##############  
   
   ##############
